kubernetes-manifest/alloy-network-policy/alloy-core-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coredns-from-alloy
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alloy-singleton
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    
    # 2. Allow Alloy pods to talk to each other to form the cluster
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "7946"
              protocol: TCP
            - port: "7946"
              protocol: UDP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-coredns-from-alloy"
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: observability
        app.kubernetes.io/name: alloy-singleton
